modules/network/main.tf
resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr

  tags = {

    Name = "demo-vpc"

  }

}

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id

}

resource "aws_subnet" "public" {

  vpc_id = aws_vpc.main.id

  cidr_block = var.public_subnet_cidr

  availability_zone = var.az

  map_public_ip_on_launch = true

  tags = {

    Name = "public-subnet"

  }

}

resource "aws_subnet" "private" {

  vpc_id = aws_vpc.main.id

  cidr_block = var.private_subnet_cidr

  availability_zone = var.az

  tags = {

    Name = "private-subnet"

  }

}

resource "aws_eip" "nat" {

  domain = "vpc"

}

resource "aws_nat_gateway" "nat" {

  allocation_id = aws_eip.nat.id

  subnet_id = aws_subnet.public.id

  depends_on = [

    aws_internet_gateway.igw

  ]

}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

}

resource "aws_route" "internet" {

  route_table_id = aws_route_table.public.id

  destination_cidr_block = "0.0.0.0/0"

  gateway_id = aws_internet_gateway.igw.id

}

resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public.id

}

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id

}

resource "aws_route" "private_nat" {

  route_table_id = aws_route_table.private.id

  destination_cidr_block = "0.0.0.0/0"

  nat_gateway_id = aws_nat_gateway.nat.id

}

resource "aws_route_table_association" "private" {

  subnet_id = aws_subnet.private.id

  route_table_id = aws_route_table.private.id

}
